# nand-io

./: .gitignore  .gitmodules  README.md
.github/workflows/: ci.yml
devices/common/: crc.c  endian.c  main.c  nand.c
devices/include/: common.h  crc.h  device.h  nand.h  protocol.h
devices/rpi-pico/: CMakeLists.txt  README.md  device.c  nand.c  private.h  serial.c  usb-descriptors.c
devices/teensypp-2.0/: Makefile  README.md  device.c  millis.c  nand.c  private.h  serial.c
nand_io/: __init__.py  __main__.py  common.py  const.py  crc.py  interface.py  logger.py  nand.py  protocol.py  serial.py
